Implements new rendering logic using classes and structured rendering components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
+    "inlineSources": true,
     "strict": true,
     "moduleResolution": "bundler",
     "target": "ES2020",
