--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,16 @@
 {
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "npm run dev",
-      "name": "Run development server",
+      "type": "chrome",
       "request": "launch",
-      "type": "node-terminal"
+      "name": "Launch Chrome",
+      "url": "http://localhost:5173/",
+      "webRoot": "${workspaceFolder}/src",
+      "trace": true
     }
   ]
 }
