--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "weather-pot",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "check-types": "tsc --noEmit",
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "prepare": "svelte-kit sync || echo ''",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
-  },
-  "devDependencies": {
-    "@eslint/compat": "^1.2.5",
-    "@eslint/js": "^9.18.0",
-    "@sveltejs/adapter-auto": "^6.0.0",
-    "@sveltejs/kit": "^2.16.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@testing-library/svelte": "^5.2.8",
-    "@types/node": "^24.0.7",
-    "@types/three": "^0.178.0",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-svelte": "^3.0.0",
-    "globals": "^16.0.0",
-    "jsdom": "^26.1.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "sass-embedded": "^1.89.2",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^6.2.6",
-    "vitest": "^3.2.4"
-  },
-  "dependencies": {
-    "three": "^0.178.0"
-  }
+    "name": "weather-pot",
+    "private": true,
+    "version": "0.0.1",
+    "type": "module",
+    "scripts": {
+        "check-types": "tsc --noEmit",
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "test": "vitest",
+        "prepare": "svelte-kit sync || echo ''",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json && eslint",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "format": "prettier --write .",
+        "lint": "prettier --check . && eslint ."
+    },
+    "devDependencies": {
+        "@eslint/compat": "^1.2.5",
+        "@eslint/js": "^9.18.0",
+        "@sveltejs/adapter-auto": "^6.0.0",
+        "@sveltejs/kit": "^2.16.0",
+        "@sveltejs/vite-plugin-svelte": "^5.0.0",
+        "@testing-library/svelte": "^5.2.8",
+        "@types/node": "^24.0.7",
+        "@types/three": "^0.178.0",
+        "eslint": "^9.18.0",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-svelte": "^3.0.0",
+        "globals": "^16.0.0",
+        "jsdom": "^26.1.0",
+        "prettier": "^3.6.2",
+        "prettier-plugin-svelte": "^3.4.0",
+        "sass-embedded": "^1.89.2",
+        "svelte": "^5.0.0",
+        "svelte-check": "^4.0.0",
+        "typescript": "^5.0.0",
+        "typescript-eslint": "^8.20.0",
+        "vite": "^6.2.6",
+        "vitest": "^3.2.4"
+    },
+    "dependencies": {
+        "three": "^0.178.0"
+    }
 }
