--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "devDependencies": {
         "@eslint/compat": "^1.2.5",
         "@eslint/js": "^9.18.0",
+        "@iconify/json": "^2.2.394",
         "@sveltejs/adapter-auto": "^6.0.0",
         "@sveltejs/kit": "^2.16.0",
-        "@sveltejs/vite-plugin-svelte": "^5.0.0",
+        "@sveltejs/vite-plugin-svelte": "^5.1.1",
         "@testing-library/svelte": "^5.2.8",
         "@types/node": "^24.0.7",
         "@types/three": "^0.178.0",
@@ -36,6 +37,7 @@
         "svelte-check": "^4.0.0",
         "typescript": "^5.0.0",
         "typescript-eslint": "^8.20.0",
+        "unplugin-icons": "^22.4.2",
         "vite": "^6.2.6",
         "vitest": "^3.2.4"
     },
