--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,8 +3,8 @@
 	"start_url": "/",
 	"icons": [
 		{
-			"src": "/static/favicon.png",
-			"sizes": "48x48",
+			"src": "/static/icons/icon-large.png",
+			"sizes": "512x512",
 			"type": "image/png"
 		}
 	],
