- Adds the new icon - Adds icon sizes for different operating systems - Updates app.html and manifest.html with new icons

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,8 +8,33 @@
 	"background_color": "#ffffff",
 	"icons": [
 		{
-			"src": "/icons/icon-large.png",
+			"src": "/icons/icon-1024x1024.png",
+			"sizes": "1024x1024",
+			"type": "image/png"
+		},
+		{
+			"src": "/icons/icon-512x512.png",
 			"sizes": "512x512",
+			"type": "image/png"
+		},
+		{
+			"src": "/icons/icon-348x348.png",
+			"sizes": "348x348",
+			"type": "image/png"
+		},
+		{
+			"src": "/icons/icon-256x256.png",
+			"sizes": "256x256",
+			"type": "image/png"
+		},
+		{
+			"src": "/icons/icon-192x192.png",
+			"sizes": "192x192",
+			"type": "image/png"
+		},
+		{
+			"src": "/icons/icon-180x180.png",
+			"sizes": "180x180",
 			"type": "image/png"
 		}
 	]
